feat(config): update package name from lol-live-eports-api to lol-live-eports and bump version to 0.9.0
- Changed package name to reflect correct project branding
- Updated homepage URL to new domain live-lol-esports.goralabs.dev
- Version bump indicates significant progress towards stable release

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "lol-live-eports-api",
-  "version": "0.1.0",
+  "name": "lol-live-eports",
+  "version": "0.9.0",
   "private": true,
   "type": "module",
-  "homepage": "http://aureom.github.io/live-lol-esports",
+  "homepage": "https://live-lol-esports.goralabs.dev",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
